[package]
name = "deployer"
version = "0.1.0"
authors = ["toyama1710 <walker2002226@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
clap = "2.33.3"
serde = "1.0.117"
toml = "0.5.7"
aes = "0.6.0"

[[bin]]
name = "deploy-client"
path = "src/client/main.rs"

[[bin]]
name = "deploy-host"
path = "src/host/main.rs"
