[package]
name = "deployer"
version = "0.4.0"
authors = ["toyama1710 <toyama@toyama1710.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
clap = "2.33.3"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
rand = "0.7.3"
dirs = "3.0.1"

[[bin]]
name = "deploy"
path = "src/client/main.rs"

[[bin]]
name = "deploy-host"
path = "src/host/main.rs"
